complete new entries and fix some existing ones.

--- a/src/qt/languages/vi-VN.po
+++ b/src/qt/languages/vi-VN.po
@@ -10,7 +10,7 @@ msgid "&Action"
 msgstr "&Thực hiện"
 
 msgid "&Keyboard requires capture"
-msgstr "Bàn phím &hoạt động cần 'bắt' chuột"
+msgstr "Bàn phím &hoạt động cần khóa đầu vào chuột"
 
 msgid "&Right CTRL is left ALT"
 msgstr "Gắn ALT trái vào CTRL ph&ải"
@@ -796,7 +796,7 @@ msgid "Other devices"
 msgstr "Các thiết bị khác"
 
 msgid "Click to capture mouse"
-msgstr "Nhấp vào khung hình để 'nhốt' chuột vào"
+msgstr "Nhấp vào khung hình để khóa đầu vào chuột"
 
 msgid "Press %1 to release mouse"
 msgstr "Nhấn %1 để thả chuột"
@@ -1780,7 +1780,7 @@ msgid "VDE Socket:"
 msgstr "Ổ cắm VDE:"
 
 msgid "TAP Bridge Device:"
-msgstr ""
+msgstr "Thiết bị cầu nối TAP:"
 
 msgid "86Box Unit Tester"
 msgstr "Trình kiểm tra đơn vị 86box"
@@ -2173,16 +2173,16 @@ msgid "WSS DMA"
 msgstr "WSS DMA"
 
 msgid "RTC IRQ"
-msgstr ""
+msgstr "Tín hiệu ngắt RTC"
 
 msgid "RTC Port Address"
-msgstr ""
+msgstr "Địa chỉ cổng RTC"
 
 msgid "Onboard RTC"
-msgstr ""
+msgstr "RTC tích hợp"
 
 msgid "Not installed"
-msgstr ""
+msgstr "Không được cài đặt"
 
 msgid "Enable OPL"
 msgstr "Bật OPL"
@@ -2695,10 +2695,10 @@ msgid "Vendor"
 msgstr "Nhà sản xuất"
 
 msgid "30 Hz (JMP2 = 1)"
-msgstr ""
+msgstr "30 Hz (JMP2 = 1)"
 
 msgid "60 Hz (JMP2 = 2)"
-msgstr ""
+msgstr "60 Hz (JMP2 = 2)"
 
 msgid "Generic PC/XT Memory Expansion"
 msgstr "Mở rộng bộ nhớ chung qua PC/XT"
@@ -2806,7 +2806,7 @@ msgid "Toggle fullscreen"
 msgstr "Bật/tắt toàn màn hình"
 
 msgid "Toggle UI in fullscreen"
-msgstr ""
+msgstr "Bật/tắt giao diện trong chế độ toàn màn hình"
 
 msgid "Release mouse pointer"
 msgstr "Thả con trỏ chuột"
@@ -3010,10 +3010,10 @@ msgid "&Allow recompilation"
 msgstr "&Cho phép biên dịch lại"
 
 msgid "&Fast forward"
-msgstr ""
+msgstr "Tăng tố&c giả lập"
 
 msgid "Fast forward"
-msgstr ""
+msgstr "Tăng tốc giả lập"
 
 msgid "To change the system directory, stop all running machines."
-msgstr ""
+msgstr "Để thay đổi thư mục hệ thống, hãy dừng tất cả máy đang chạy lại."
